--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -7,15 +7,16 @@
 }
 
 .container {
+    background-color: #fafafa;
+    max-width: 100%;
+    height: 100dvb;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 100%;
-    background-color: #fafafa;
 }
 
 .header {
     display: flex;
+    max-width: 100%;
     justify-content: space-between;
     align-items: center;
     background-color: #ffffff;
@@ -23,20 +24,22 @@
     padding: 20px;
     height: 30px;
     box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
+    z-index: 1;
 }
 
 .title {
+    flex-shrink: 0;
     font-weight: 800;
     font-size: 25px;
     position: relative;
-    left: 6%;
+    left: 5%;
 }
 
 .dark-mode {
     display: flex;
-    align-items: center;
     position: relative;
-    right: 6%;
+    right: 5%;
+    align-items: center;
     font-size: 1.2rem;
 }
 
@@ -47,13 +50,13 @@
 
 .wrapper {
     margin-top: 1rem;
-    margin-left: 3rem;
+    margin-left: 6%;
     background-color: #fafafa;
 }
 
 .button {
     margin-bottom: 3rem;
-    width: 9%;
+    width: 7%;
 }
 
 .button>button {
@@ -81,7 +84,7 @@
 }
 
 .image {
-    height: 300px;
+    height: 350px;
     min-width: 350px;
 }
 
@@ -161,27 +164,29 @@
         justify-content: space-between;
         text-align: center;
         align-items: center;
-        max-width: 100%;
         background-color: #ffffff;
         margin-bottom: 0px;
         box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
+        max-width: 100%;
     }
 
-    .header>p {
-        font-size: 20px;
+    .header>h2 {
+        font-size: 16px;
+        font-weight: bold;
     }
-
 
     .title {
         position: static;
         left: 0;
+        align-items: center;
     }
 
     .dark-mode {
-        right: 0;
+        position: static;
         align-items: center;
-        font-size: 20px;
-        right: 0px;
+        font-size: 16px;
+        /* margin-right: 12%; */
+
     }
 
     .button {
@@ -203,11 +208,11 @@
 
     .image {
         width: 100%;
-        height: 400px;
+        height: 350px;
     }
 
     .image>img {
-        width: 80%;
+        width: 300px;
         height: 90%;
         margin-bottom: 2rem;
         object-fit: contain;
