--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -127,7 +127,7 @@
     margin-top: 3rem;
     margin-bottom: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(375px,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
     grid-template-rows: auto;
     grid-gap: 3rem;
     /* width: 100%; */
@@ -167,10 +167,13 @@ img {
 
 .country>p {
     width: 100%;
-    font-size: 17px;
+    font-size: 14px;
     font-weight: bold;
-    /* white-space: nowrap; */
-
+}
+.population>p,
+.region>p,
+.capital>p{
+    font-size: 14px;
 }
 
 /* .population {
@@ -185,7 +188,8 @@ img {
     display: flex;
 } */
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+   
     .header {
         display: flex;
         flex-direction: row;
@@ -196,55 +200,78 @@ img {
         background-color: #ffffff;
         margin-bottom: 0px;
         box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
+        max-width: 100%;
     }
 
     .header>p {
-        font-size: 20px;
+        font-size: 16px;
+        font-weight: bold;
     }
 
     .title {
         position: static;
         left: 0;
+        align-items: center;
     }
 
     .dark-mode {
+        position: static;
         right: 0;
         align-items: center;
-        font-size: 20px;
+        font-size: 14px;
         right: 0px;
-        margin-right: 4rem;
+        margin-right: 12%;
+
+    }
+
+    .wrapper{
+        align-items: center;
+        justify-content: center;
+        max-width: 100%;
+        margin: auto auto;
     }
 
     .seach-container {
-        margin-top: 7rem;
+        margin-top: 7rem ;
         display: flex;
         flex-direction: column;
-        width: 100%;
+        align-items: flex-start;
     }
 
     .left-side {
-        width: 400px;
+        display: flex;
+        flex-direction: row;
         margin-bottom: 2rem;
-        position: relative;
+        align-items: center;
+        justify-content: center;
+        /* margin-left: 5rem; */
+        width: 300px;
 
     }
 
     .left-side>input {
-        width: 20px;
+        width: 0px;
     }
 
     .dropdown {
-        width: 80%;
-        position: relative;
-        left: -90px;
-        padding: 10px;
+        /* width: 100%; */
+        /* margin-left: -5.5rem; */
     }
+    
 
     .cards-container {
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
+        grid-template-columns: 250px;
+        grid-template-rows: auto;
         row-gap: 3rem;
         margin-bottom: 3rem;
+        min-width: 100%;
+        margin:2rem  auto;
+        justify-content: center;
     }
+    .card-container{
+        width: 100%;
+        height: auto;
+    }
+
 }
