--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -2,8 +2,7 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Nunito Sans', sans-serif;
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
 }
 
 .container {
@@ -49,29 +48,30 @@
 }
 
 .wrapper {
-    margin-top: 1rem;
+    margin-top: 3rem;
     margin-left: 6%;
     background-color: #fafafa;
 }
 
 .button {
-    margin-bottom: 3rem;
-    width: 7%;
+    margin-bottom: 4rem;
+    min-width: 10%;
 }
 
 .button>button {
-    width: 100%;
+    width: 100px;
     border-radius: 5px;
     padding: 7px;
     background-color: #ffffff;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-weight: 300;
+
 }
 
 .button>button>i {
     position: relative;
-    left: -5px;
+    left: -2%;
 }
 
 .button>button:hover {
@@ -99,63 +99,55 @@
 }
 
 .country-name {
-    margin-bottom: 1.2em;
+    margin-bottom: 1.5rem;
 }
 
 .info-wrapper {
     display: flex;
-    width: 100%;
-    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .info1,
 .info2 {
     display: flex;
     flex-direction: column;
+    margin-right: 9rem;
 }
 
 .info1>p,
 .info2>p {
     margin-bottom: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.info2 {
-    position: relative;
-    right: -180px;
 }
 
 .border {
     display: flex;
     flex-direction: row;
-    position: relative;
-    bottom: -25px;
+    margin-top: 3.5rem;
 }
 
 .countries {
     display: flex;
-    position: relative;
-    left: 13px;
+    flex-wrap: wrap;
+    margin-left: 14px;
 }
 
 .countries>p {
-    border: none;
     text-align: center;
-    position: relative;
-    width: 120px;
-    padding: 1px;
-    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 1rem;
+    width: 100px;
+    height: 25px;
+    padding: 2px;
     background-color: #ffffff;
     border-radius: 5px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: 0 8px 24px rgba(149, 157, 165, 0.2);
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 820px) {
 
-    .container {
-        display: flex;
-        flex-direction: column;
+    body {
+        background-color: #fafafa
     }
 
     .header {
@@ -185,8 +177,6 @@
         position: static;
         align-items: center;
         font-size: 16px;
-        /* margin-right: 12%; */
-
     }
 
     .button {
@@ -196,7 +186,7 @@
     }
 
     .wrapper {
-        margin: 0px;
+        margin: auto;
         padding-left: 30px;
         box-sizing: border-box;
         background-color: #fafafa
@@ -212,14 +202,14 @@
     }
 
     .image>img {
-        width: 300px;
+        max-width: 320px;
         height: 90%;
         margin-bottom: 2rem;
         object-fit: contain;
     }
 
     .details {
-        margin: 0rem;
+        margin: 0;
     }
 
     .info-wrapper {
@@ -235,17 +225,16 @@
     .border {
         margin-top: 1rem;
         flex-direction: column;
-        bottom: 0;
     }
 
     .countries {
-        position: relative;
-        left: -10px;
+        flex-wrap: nowrap;
         margin-top: 2rem;
+        margin-left: 0px;
     }
 
     .countries>p {
-        margin: 0.5rem;
+        margin-right: 0.5rem;
         margin-bottom: 3rem;
     }
 }
