--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -5,8 +5,11 @@
     font-size: 16px;
 }
 
-.container {
+body {
     background-color: #fafafa;
+}
+
+.container {
     max-width: 100%;
     height: 100dvb;
     display: flex;
@@ -16,6 +19,10 @@
 .header {
     display: flex;
     max-width: 100%;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
     justify-content: space-between;
     align-items: center;
     background-color: #ffffff;
@@ -35,7 +42,6 @@
 .dark-mode {
     margin-right: 5%;
     font-size: 16px;
-
 }
 
 .dark-mode>span {
@@ -45,13 +51,13 @@
 }
 
 .wrapper {
-    margin: 3rem 6%;
+    margin: 9rem 6% 3rem 6%;
     max-width: 88%;
-    background-color: #fafafa;
+    /* background-color: #fafafa; */
 }
 
 .button {
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
     min-width: 10%;
 }
 
@@ -61,9 +67,7 @@
     padding: 7px;
     background-color: #ffffff;
     border: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    font-weight: 300;
-
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .button>button>i {
@@ -75,7 +79,6 @@
     cursor: pointer;
 }
 
-
 .content {
     display: flex;
     flex-direction: row;
@@ -83,24 +86,26 @@
 }
 
 .image {
-    display: flex;
-    width: 45%;
+    /* display: flex; */
+    min-width: 40%;
+    /* justify-content: flex-start; */
 }
 
-img {
-    flex-basis: 50%;
+
+.image>img {
     width: 100%;
-    height: 400px;
+    object-fit: cover;
+    height: 390px;
 }
 
 .details {
-    width: 55%;
-    margin: 1rem;
+    width: 49%;
+    margin-left: 10%;
     margin-top: 3rem;
 }
 
 .country-name {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .country-name>h1 {
@@ -126,30 +131,36 @@ ul li {
 
 .border {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     margin-top: 3.5rem;
-}
 
-.countries {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 14px;
 }
 
 .border>span {
     font-weight: 600;
+    margin-bottom: 1rem;
+    /* margin-top: 0.7rem; */
+}
+
+.countries {
+    display: flex;
+    /* flex-wrap: wrap; */
+    margin-left: 14px;
+
 }
 
 .countries>span {
     text-align: center;
+    margin-bottom: 1rem;
     margin-right: 10px;
     width: 100px;
     height: 25px;
-    padding: 3.1px;
+    padding: 3.1px 3.1px;
     background-color: #ffffff;
     border-radius: 5px;
-    box-shadow: 0 8px 24px rgba(149, 157, 165, 0.2);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 
@@ -159,7 +170,7 @@ ul li {
         background-color: #fafafa
     }
 
-    .header {
+    /* .header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -168,12 +179,12 @@ ul li {
         background-color: #ffffff;
         margin-bottom: 0px;
         box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
-    }
+    } */
 
-    .header>h2 {
+    /* .header>h2 {
         font-size: 16px;
         font-weight: bold;
-    }
+    } */
 
     .title {
         font-size: clamp(16px, 4vw, 20px);
@@ -194,8 +205,12 @@ ul li {
         margin-bottom: 3rem;
     }
 
+    .button>button {
+        width: 110px;
+    }
+
     .wrapper {
-        margin: auto;
+        margin: 5rem auto;
         box-sizing: border-box;
         background-color: #fafafa
     }
@@ -210,7 +225,7 @@ ul li {
     }
 
     .image>img {
-        max-width: 320px;
+        max-width: 330px;
         height: 90%;
         margin-bottom: 2rem;
         object-fit: contain;
@@ -224,16 +239,17 @@ ul li {
         flex-direction: column;
     }
 
+
     .info2 {
         width: 250px;
-        margin-top: 2rem;
+        margin-top: -1rem;
         position: static;
         right: 0;
     }
 
     .border {
         display: flex;
-        margin-top: 1rem;
+        margin-top: 1.5rem;
         align-items: flex-start;
         flex-direction: column;
     }
@@ -242,12 +258,12 @@ ul li {
         flex-wrap: nowrap;
         align-items: center;
         justify-content: center;
-        margin-top: 1rem;
+        margin-top: 0.5rem;
         margin-left: 0px;
     }
 
     .countries>span {
         margin-right: 0.5rem;
-        margin-bottom: 3rem;
+        margin-bottom: 4rem;
     }
 }
