--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,32 +17,32 @@ body {
 
 .header {
     display: flex;
-    position: fixed;
+    position: sticky;
     top: 0px;
     left: 0px;
     right: 0px;
-    max-width: 100%;
     justify-content: space-between;
     align-items: center;
     background-color: #ffffff;
-    margin-bottom: 2rem;
-    padding: 20px;
-    height: 30px;
+    padding: 25px 80px;
     max-width: 100%;
-    box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.11);
     z-index: 1;
 }
 
 .title {
     font-weight: 800;
     font-size: clamp(18px, 6vw, 23px);
-    margin-left: 4%;
+}
+
+.dark-mode-button {
+    border: none;
+    background-color: #ffffff;
+    cursor: pointer;
 }
 
 .dark-mode {
-    margin-right: 4%;
     font-size: 16px;
-
 }
 
 .dark-mode>span {
@@ -52,7 +52,11 @@ body {
 }
 
 .wrapper {
-    margin: 0% 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0px 80px;
+
 }
 
 .seach-filter-container {
@@ -61,22 +65,24 @@ body {
     align-items: center;
     justify-content: space-between;
     max-width: 100%;
-    margin-top: 8rem;
+    padding: 50px 0px;
 }
 
 .search-container {
+    position: relative;
+    position: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     background-color: #ffffff;
-    padding: 13px;
-    min-width: 35%;
+    padding: 14px 0px;
+    min-width: 37%;
     border-radius: 5px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .search-container>input {
     border: none;
-    position: relative;
-    min-width: 80%;
-    left: 10px;
+    min-width: 70%;
 }
 
 .search-container>input:focus {
@@ -85,11 +91,14 @@ body {
 
 .search-container>i {
     position: static;
-    margin-left: 1.2rem;
+    margin-left: 2rem;
+    margin-right: 1.5rem;
+
+
 }
 
 .dropdown-container {
-    width: 16rem;
+    width: 14rem;
     position: relative;
 }
 
@@ -102,7 +111,7 @@ body {
     background-color: #ffffff;
     display: flex;
     justify-content: space-between;
-    padding: 13px;
+    padding: 14px 16px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 5px;
     align-items: center;
@@ -112,8 +121,8 @@ body {
 .dropdown-list {
     background-color: #ffffff;
     border-radius: 5px;
-    height: 6rem;
-    padding: 20px;
+    height: auto;
+    padding: 15px 20px 20px 20px;
     position: absolute;
     top: 110%;
     left: 0;
@@ -125,20 +134,20 @@ body {
 
 
 .cards-container {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     grid-template-rows: auto;
-    grid-gap: 3rem;
+    grid-gap: 5rem;
 }
 
 .card-container {
+    text-decoration: none;
+    color: black;
     box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
     border-radius: 5px;
     background-color: #ffffff;
     width: 100%;
-    height: 330px;
+    height: auto;
 }
 
 img {
@@ -150,7 +159,8 @@ img {
 }
 
 .description-container {
-    margin: 2rem;
+    /* margin: 2rem; */
+    padding: 2rem;
 }
 
 .description-container>span {
@@ -172,70 +182,58 @@ img {
 
 .label {
     font-weight: 600;
+    margin-right: 1px;
+}
+
+ul {
+    list-style: none;
 }
 
 
-@media (max-width: 602px) {
+@media (max-width: 768px) {
 
     .header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        text-align: center;
-        align-items: center;
-        max-width: 100%;
-        background-color: #ffffff;
-        margin-bottom: 0px;
-        box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
-        max-width: 100%;
+        padding: 35px 20px;
     }
 
     .title {
         font-size: clamp(14px, 4vw, 20px);
-        position: static;
-        /* align-items: center; */
-        margin-left: 1%;
     }
 
     .dark-mode {
         font-size: clamp(14px, 4vw, 20px);
-        position: static;
-        right: 0;
-        margin-right: 3%;
-
     }
 
     .wrapper {
-        align-items: center;
-        justify-content: center;
+        padding: 0px 0px;
         max-width: 100%;
+        padding: 30px 20px 30px 20px;
+
     }
 
     .seach-filter-container {
         display: flex;
         flex-direction: column;
-        position: relative;
-        max-width: 90%;
-        margin-top: 7rem;
+        max-width: 100%;
         justify-content: center;
         align-items: flex-start;
+        padding: 0px;
     }
 
     .search-container {
-        margin-bottom: 2rem;
+        margin-bottom: 2.8rem;
         align-items: center;
         justify-content: center;
         width: 100%;
-
     }
 
     .cards-container {
         display: grid;
-        grid-template-columns: 250px;
-        margin-bottom: 3rem;
-        min-width: 100%;
-        margin: 2rem auto;
+        grid-template-columns: repeat(auto-fill, minmax(1fr));
+        max-width: 100%;
+        row-gap: 3rem;
         justify-content: center;
+        padding: 35px 30px 0px 30px;
     }
 
     .card-container {
