--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -18,29 +18,31 @@ body {
 
 .header {
     display: flex;
-    max-width: 100%;
-    position: fixed;
-    top: 0px;
-    right: 0px;
+    position: sticky;
+    top: -0px;
     left: 0px;
+    right: 0px;
     justify-content: space-between;
     align-items: center;
     background-color: #ffffff;
-    margin-bottom: 2rem;
-    padding: 20px;
-    height: 30px;
-    box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
+    padding: 25px 80px;
+    max-width: 100%;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.11);
     z-index: 1;
 }
 
 .title {
-    margin-left: 5%;
     font-weight: 800;
-    font-size: clamp(16px, 6vw, 23px);
+    font-size: clamp(18px, 6vw, 23px);
+}
+
+.dark-mode-button {
+    border: none;
+    background-color: #ffffff;
+    cursor: pointer;
 }
 
 .dark-mode {
-    margin-right: 5%;
     font-size: 16px;
 }
 
@@ -50,14 +52,13 @@ body {
     font-size: 16px;
 }
 
+
 .wrapper {
-    margin: 9rem 6% 3rem 6%;
+    margin: 5rem 6%;
     max-width: 88%;
-    /* background-color: #fafafa; */
 }
 
 .button {
-    margin-bottom: 5rem;
     min-width: 10%;
 }
 
@@ -80,15 +81,14 @@ body {
 }
 
 .content {
+    padding: 5rem 0rem;
     display: flex;
     flex-direction: row;
     max-width: 100%;
 }
 
 .image {
-    /* display: flex; */
     min-width: 40%;
-    /* justify-content: flex-start; */
 }
 
 
@@ -104,10 +104,6 @@ body {
     margin-top: 3rem;
 }
 
-.country-name {
-    margin-bottom: 2rem;
-}
-
 .country-name>h1 {
     font-weight: 800;
     font-size: 30px;
@@ -117,11 +113,13 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 100%;
+    max-width: 100%;
+    padding: 2rem 0 3.5rem 0;
 }
 
 ul li {
     margin-bottom: 0.6rem;
+    list-style: none;
 }
 
 .label {
@@ -131,36 +129,35 @@ ul li {
 
 .border {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    margin-top: 3.5rem;
-
 }
 
 .border>span {
     font-weight: 600;
-    margin-bottom: 1rem;
-    /* margin-top: 0.7rem; */
+    margin-right: 14px;
+
 }
+
 
 .countries {
     display: flex;
-    /* flex-wrap: wrap; */
-    margin-left: 14px;
+    flex-wrap: wrap;
+    max-width: 100%;
+
 
 }
 
 .countries>span {
+    margin: 5px;
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    margin-bottom: 1rem;
-    margin-right: 10px;
-    width: 100px;
-    height: 25px;
-    padding: 3.1px 3.1px;
     background-color: #ffffff;
+    padding: 5px 20px;
     border-radius: 5px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 
@@ -170,39 +167,21 @@ ul li {
         background-color: #fafafa
     }
 
-    /* .header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        text-align: center;
-        align-items: center;
-        background-color: #ffffff;
-        margin-bottom: 0px;
-        box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.11);
-    } */
-
-    /* .header>h2 {
-        font-size: 16px;
-        font-weight: bold;
-    } */
+    .header {
+        padding: 35px 20px;
+        max-width: 100%;
+    }
 
     .title {
-        font-size: clamp(16px, 4vw, 20px);
-        position: static;
-        margin-left: 1%;
+        font-size: clamp(10px, 4vw, 20px);
     }
 
     .dark-mode {
-        font-size: clamp(16px, 4vw, 20px);
-        position: static;
-        margin-right: 1%;
-
+        font-size: clamp(10px, 4vw, 20px);
     }
 
     .button {
-        margin-top: 2rem;
         width: 30%;
-        margin-bottom: 3rem;
     }
 
     .button>button {
@@ -210,60 +189,67 @@ ul li {
     }
 
     .wrapper {
-        margin: 5rem auto;
+        max-width: 100%;
+        margin: 0rem;
+        padding: 2.5rem 2rem 0rem 2rem;
         box-sizing: border-box;
         background-color: #fafafa
     }
 
+
     .content {
+        padding: 4rem 0rem;
         flex-direction: column;
     }
 
     .image {
         width: 100%;
-        height: 350px;
+        height: auto;
     }
 
     .image>img {
-        max-width: 330px;
-        height: 90%;
-        margin-bottom: 2rem;
-        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .details {
-        margin: 0;
+        margin: 0rem;
+        width: 100%;
+        padding: 2rem 0rem 0rem 0rem;
+
     }
 
     .info-wrapper {
+        display: flex;
+        max-width: 100%;
         flex-direction: column;
+        padding: 1.8rem 0rem 2rem 0rem;
     }
 
-
     .info2 {
-        width: 250px;
-        margin-top: -1rem;
-        position: static;
-        right: 0;
+        flex-wrap: wrap;
+        padding-top: 2rem;
     }
 
     .border {
         display: flex;
-        margin-top: 1.5rem;
-        align-items: flex-start;
         flex-direction: column;
-    }
-
-    .countries {
-        flex-wrap: nowrap;
-        align-items: center;
-        justify-content: center;
-        margin-top: 0.5rem;
-        margin-left: 0px;
+        align-items: flex-start;
     }
 
     .countries>span {
-        margin-right: 0.5rem;
-        margin-bottom: 4rem;
+        margin: 15px 8px 0px 0px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        flex-grow: 1;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        background-color: #ffffff;
+        padding: 5px 14px;
+        border-radius: 5px;
     }
+
 }
