--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -72,18 +72,8 @@ li {
     margin: 4px;
     font-size: 16px;
     padding: 1% 5%;
-    box-shadow: rgba(149, 157, 165, 0.2) 8px 8px 24px;
+    /* box-shadow: rgba(149, 157, 165, 0.2) 8px 8px 24px; */
 
-}
-
-.custom-col {
-    margin-left: 5rem;
-}
-
-.img-fluid {
-    width: 550px;
-    height: 400px;
-    object-fit: cover;
 }
 
 .custom-border {
@@ -103,16 +93,6 @@ li {
 
     .dark-mode {
         font-size: clamp(16px, 4vw, 20px);
-    }
-
-    .img-fluid {
-        width: auto;
-        height: auto;
-        object-fit: cover;
-    }
-
-    .custom-col {
-        margin-left: 0rem;
     }
 
     .custom-back-btn {
