--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -287,6 +287,7 @@ body {
     background-color: #888888;
     border-radius: 4px;
     width: 8px;
+    padding: 10rem;
 }
 
 .fav-country::-webkit-scrollbar-track {
